--- a/public/css/zieffler.css
+++ b/public/css/zieffler.css
@@ -4,6 +4,10 @@
 @import url('https://fonts.googleapis.com/css?family=Lora');
 @import url('https://fonts.googleapis.com/css?family=Cinzel');
 
+@import url('https://fonts.googleapis.com/css?family=Special+Elite');
+
+
+
 
 
 
